--- a/app/osint/scrl/Card.module.scss
+++ b/app/osint/scrl/Card.module.scss
@@ -2,7 +2,9 @@
   position: relative;
   display: block;
   padding: 0 1ch calc((var(--font-size) * 0.5) * var(--theme-line-height-base)) 1ch;
-  white-space: prewrap;
+  white-space: pre-wrap;
+  border: 2px solid var(--theme-text);
+  background: var(--theme-background);
 }
 
 .children {
@@ -11,7 +13,6 @@
   display: block;
   padding: calc((var(--font-size) * 0.5) * var(--theme-line-height-base)) 2ch
     calc(var(--font-size) * var(--theme-line-height-base)) 2ch;
-
   overflow-x: auto;
   overflow-y: hidden;
 
@@ -26,6 +27,7 @@
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
+  border-bottom: 2px solid var(--theme-text);
 }
 
 .left {
@@ -56,7 +58,8 @@
 
 .title {
   flex-shrink: 0;
-  padding: 0 1ch 0 1ch;
+  padding: 0 1ch;
   font-size: var(--font-size);
   font-weight: 400;
+  color: var(--theme-text);
 }
