--- a/app/osint/scrl/global.scss
+++ b/app/osint/scrl/global.scss
@@ -148,16 +148,16 @@ video {
 
 a {
   background: var(--theme-border-subdued);
-  color: var(--theme-text);
+  color: "white";
 
   &:hover {
     background: var(--theme-focused-foreground);
-    color: var(--theme-text);
+    color: "white";
   }
 
   &:focus {
     background: var(--theme-focused-foreground);
-    color: var(--theme-text);
+    color: "white";
     outline: 0;
   }
 }
@@ -213,54 +213,6 @@ section {
   display: block;
 }
 
-body.theme-blue {
-  --theme-overlay: var(--color-blue-20-5);
-  --theme-background: var(--color-blue-80);
-  --theme-background-modal: var(--color-blue-70);
-  --theme-background-modal-footer: var(--color-blue-90);
-  --theme-background-input: var(--color-blue-60);
-  --theme-border: var(--color-blue-70);
-  --theme-border-subdued: var(--color-blue-60-2);
-  --theme-error: var(--color-red-60);
-  --theme-error-subdued: var(--color-red-60-3);
-  --theme-primary: var(--color-gold-30);
-  --theme-success: var(--color-green-60);
-  --theme-success-subdued: var(--color-green-60-3);
-  --theme-text: var(--color-blue-10);
-
-  --theme-button: var(--color-blue-10);
-  --theme-button-text: var(--color-blue-80);
-
-  --theme-button-foreground: var(--color-blue-60);
-  --theme-button-background: var(--color-blue-70);
-  --theme-focused-foreground: var(--color-blue-50);
-  --theme-focused-foreground-subdued: var(--color-blue-50-5);
-}
-
-body.theme-light {
-  --theme-overlay: var(--color-black-100-4);
-  --theme-background: var(--color-white);
-  --theme-background-modal: var(--color-gray-20);
-  --theme-background-modal-footer: var(--color-gray-40);
-  --theme-background-input: var(--color-gray-10);
-  --theme-border: var(--color-gray-20);
-  --theme-border-subdued: var(--color-gray-40-2);
-  --theme-error: var(--color-red-60);
-  --theme-error-subdued: var(--color-red-60-3);
-  --theme-primary: var(--color-blue-60);
-  --theme-success: var(--color-neon-green-70);
-  --theme-success-subdued: var(--color-neon-green-70-3);
-  --theme-text: var(--color-black-100);
-
-  --theme-button: var(--color-black-100);
-  --theme-button-text: var(--color-white);
-
-  --theme-button-foreground: var(--color-gray-30);
-  --theme-button-background: var(--color-gray-20);
-  --theme-focused-foreground: var(--color-neon-green-50);
-  --theme-focused-foreground-subdued: var(--color-neon-green-50-5);
-}
-
 body {
   --theme-overlay: var(--color-black-100-4);
   --theme-background: var(--color-black-100);
@@ -274,7 +226,7 @@ body {
   --theme-primary: var(--color-gold-30);
   --theme-success: var(--color-green-60);
   --theme-success-subdued: var(--color-green-60-3);
-  --theme-text: var(--color-white);
+  --theme-text: var(--color-white) !important;
 
   --theme-button: var(--color-white);
   --theme-button-text: var(--color-black-100);
@@ -283,31 +235,6 @@ body {
   --theme-button-background: var(--color-gray-80);
   --theme-focused-foreground: var(--color-daybreak-10);
   --theme-focused-foreground-subdued: var(--color-daybreak-10-5);
-}
-
-body.theme-green {
-  --theme-overlay: var(--color-neon-green-100-4);
-  --theme-background: rgba(44, 255, 5);
-
-  --theme-background-modal: var(--color-neon-green-50);
-  --theme-background-modal-footer: var(--color-neon-green-50-5);
-  --theme-background-input: var(--color-neon-green-30);
-  --theme-border: var(--color-neon-green-60);
-  --theme-border-subdued: var(--color-neon-green-60-3);
-  --theme-error: var(--color-red-60);
-  --theme-error-subdued: var(--color-red-60-3);
-  --theme-primary: var(--color-gold-30);
-  --theme-success: var(--color-green-60);
-  --theme-success-subdued: var(--color-green-60-3);
-  --theme-text: var(--color-neon-green-100);
-
-  --theme-button: var(--color-neon-green-100);
-  --theme-button-text: var(--color-neon-green-10);
-
-  --theme-button-foreground: var(--color-neon-green-80);
-  --theme-button-background: var(--color-neon-green-70);
-  --theme-focused-foreground: rgba(255, 82, 243, 1);
-  --theme-focused-foreground-subdued: rgba(255, 82, 243, 0.5);
 }
 
 body.font-use-berkeley-mono {
@@ -453,7 +380,7 @@ body {
   --z-index-modals: 10;
 
   background: var(--theme-background);
-  color: var(--theme-text);
+  color: "white";
   font-family: var(--font-family-mono);
   line-height: calc(var(--theme-line-height-base) * 1rem);
 
